<resources>
    <string name="app_name">Roommate</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="your_roommates">Your Roommates</string>

    <string name="roommate1_name">Jack Parent</string>
    <string name="roommate1_lastseen">Last Online 1/21/2017</string>

    <string name="roommate2_name">Lindsay Nichols</string>
    <string name="roommate2_lastseen">Last Online 1/20/2017</string>

    <string name="expenses">Expenses</string>
    <string name="expenses_monthly_text">This Month:</string>
    <string name="expenses_paid_text">Amount Paid: </string>
    <string name="expenses_monthly">$204</string>
    <string name="expenses_paid">$150</string>

    <string name="payments_header">Payments</string>
    <string name="payments_button">Make a Payment</string>

    <string name="split">Split</string>
    <string name="split_email">split@example.com</string>

    <string name="your_profile">Your Profile</string>
    <string name="groups">Groups</string>
    <string name="payment_history">Payment History</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_brunch_buddies">BrunchBuddiesActivity</string>

    <string name="brunch_buddies">Brunch Buddies</string>
    <string name="expenses_monthly2">$46</string>
    <string name="expenses_paid2">$40</string>
    <string name="brunchbuddy1_name">Tim Tepatti</string>
    <string name="brunchbuddy2_name">Shane Combs</string>

    <string name="group_list">Group List</string>
    <string name="roommates">Roommates</string>
    <string name="add_another">Add Another!</string>
</resources>
