<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.spartahack.roommate.BrunchBuddiesActivity"
    tools:showIn="@layout/app_bar_brunch_buddies">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:text="@string/brunch_buddies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/brunchHeader"
            android:layout_marginBottom="20dp"
            android:textAppearance="@android:style/TextAppearance.Material.Display1"
            android:textAlignment="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="match_parent"
                app:srcCompat="@drawable/profilepic"
                android:id="@+id/profilePicture1"
                android:adjustViewBounds="true"
                android:maxWidth="42dp"
                android:maxHeight="42dp"
                android:scaleType="fitCenter"
                android:layout_height="wrap_content"
                android:layout_marginRight="19dp"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text="@string/brunchbuddy1_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/roommate1Name" />

                <TextView
                    android:text="@string/roommate1_lastseen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/roommate1LastSeen" />

            </LinearLayout>

            <Button
                android:text="Details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/roommate1Details"
                android:layout_marginLeft="19dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="49dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="51dp">

                <ImageView
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/profilepic"
                    android:id="@+id/profilePicture2"
                    android:adjustViewBounds="true"
                    android:maxWidth="42dp"
                    android:maxHeight="42dp"
                    android:scaleType="fitCenter"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="19dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/brunchbuddy2_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/roommate2Name"
                        android:layout_weight="1" />

                    <TextView
                        android:text="@string/roommate2_lastseen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/roommate2LastSeen"
                        android:layout_weight="1" />
                </LinearLayout>

                <Button
                    android:text="Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/roommate2Details"
                    android:layout_marginLeft="19dp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expensesHeader"
            android:layout_marginTop="10dp"
            android:textSize="30sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:text="@string/expenses_monthly_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textAlignment="center"
                android:translationY="-9dp"
                android:id="@+id/ThisMonthExpensesText" />

            <TextView
                android:text="@string/expenses_monthly2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/thisMonthExpensesValue"
                android:layout_weight="1"
                android:textSize="50sp"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:text="@string/expenses_paid_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/thisMonthPaidText"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:translationY="-9dp" />

            <TextView
                android:text="@string/expenses_paid2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/thisMonthPaidValue"
                android:layout_weight="1"
                android:textSize="50sp"
                android:textAlignment="center" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/payments_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/paymentsHeader"
            android:layout_marginTop="10dp"
            android:textSize="30sp" />

        <Button
            android:text="@string/payments_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/button7"
            android:layout_weight="0.47" />

    </LinearLayout>

</RelativeLayout>
